--- a/arch/arm/boot/dts/am57xx-idk-common.dtsi
+++ b/arch/arm/boot/dts/am57xx-idk-common.dtsi
@@ -12,6 +12,8 @@
 		rtc1 = &rtc;
 		display0 = &hdmi0;
 		sound0 = &hdmi;
+		ethernet2 = &pruss2_emac0;
+		ethernet3 = &pruss2_emac1;
 	};
 
 	vmain: fixedregulator-vmain {
@@ -584,6 +586,44 @@
 	pru2_1: pru1@4b2b8000 {
 		mboxes = <&mailbox4 &mbox_pru2_1>;
 		status = "okay";
+	};
+
+	pruss2_mdio: mdio@4b2b2400 {
+		status = "okay";
+		pruss2_eth0_phy: ethernet-phy@0 {
+			reg = <0>;
+			interrupt-parent = <&gpio3>;
+			interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
+		};
+
+		pruss2_eth1_phy: ethernet-phy@1 {
+			reg = <1>;
+			interrupt-parent = <&gpio3>;
+			interrupts = <31 IRQ_TYPE_EDGE_FALLING>;
+		};
+	};
+
+	/* Dual mac ethernet application node on icss2 */
+	pruss2_eth {
+		compatible = "ti,prueth";
+		pruss = <&pruss2>;
+		sram = <&ocmcram1>;
+
+		pruss2_emac0: ethernet-mii0 {
+			phy-handle = <&pruss2_eth0_phy>;
+			phy-mode = "mii";
+			sysevent-rx = <20>;	/* PRU_ARM_EVENT0 */
+			/* Filled in by bootloader */
+			local-mac-address = [00 00 00 00 00 00];
+		};
+
+		pruss2_emac1: ethernet-mii1 {
+			phy-handle = <&pruss2_eth1_phy>;
+			phy-mode = "mii";
+			sysevent-rx = <21>;	/* PRU_ARM_EVENT1 */
+			/* Filled in by bootloader */
+			local-mac-address = [00 00 00 00 00 00];
+		};
 	};
 };
 
