--- a/ti_config_fragments/connectivity.cfg
+++ b/ti_config_fragments/connectivity.cfg
@@ -143,6 +143,9 @@ CONFIG_NET_SCH_FIFO=y
 CONFIG_IP_SCTP=m
 CONFIG_VLAN_8021Q=m
 
+#PRUSS Ethernet driver
+CONFIG_TI_PRUETH=m
+
 #MDIO phys
 CONFIG_MICREL_PHY=y
 
