--- a/drivers/gpu/drm/tidss/Kconfig
+++ b/drivers/gpu/drm/tidss/Kconfig
@@ -27,4 +27,15 @@ config DRM_TIDSS_DSS7
 	help
 	  Support for DSS7 IP on AM6 SoC
 
+config DRM_TIDSS_WB
+	bool "Enable writeback support for TIDSS DRM driver"
+	depends on DRM_TIDSS
+	depends on (VIDEO_V4L2 = y) || (VIDEO_V4L2 = m && DRM_TIDSS = m)
+	depends on VIDEO_DEV && HAS_DMA
+	select VIDEOBUF2_DMA_CONTIG
+	select V4L2_MEM2MEM_DEV
+	default y
+	help
+		Select this to enable memory-to-memory/capture writeback support.
+
 endif
