--- a/drivers/rpmsg-kdrv/Makefile
+++ b/drivers/rpmsg-kdrv/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-$(CONFIG_RPMSG_KDRV)		+= rpmsg_kdrv.o
 obj-$(CONFIG_RPMSG_KDRV_DISPLAY)	+= rpmsg_kdrv_display.o
+obj-$(CONFIG_RPMSG_KDRV_ETH_SWITCH)	+= rpmsg_kdrv_switch.o
