--- a/drivers/net/ethernet/ti/Kconfig
+++ b/drivers/net/ethernet/ti/Kconfig
@@ -174,4 +174,12 @@ config TI_ICSSG_PRUETH
 	  Support dual Gigabit Ethernet ports over the ICSSG PRU Subsystem
 	  This subsystem is available starting with the AM65 platform.
 
+config TI_RDEV_ETH_SWITCH_VIRT_EMAC
+	tristate "TI Virtual Eth MAC driver"
+	depends on ARCH_K3 && OF && TI_K3_UDMA_GLUE_LAYER
+	help
+	  Support for 1 Port Virtual Eth MAC driver over remotedev
+	  R5F Eth Switch FW RPMSG protocol.
+	  This is available starting with the J721E platform.
+
 endif # NET_VENDOR_TI
