--- a/ti_config_fragments/audio_display.cfg
+++ b/ti_config_fragments/audio_display.cfg
@@ -67,6 +67,7 @@ CONFIG_DRM_OMAP_PANEL_DPI=y
 
 # tidss
 CONFIG_DRM_TIDSS=y
+CONFIG_DRM_TIDSS_WB=y
 CONFIG_DRM_TIDSS_DSS6=y
 CONFIG_DRM_TIDSS_DSS7=y
 
