--- a/arch/arm64/boot/dts/ti/Makefile
+++ b/arch/arm64/boot/dts/ti/Makefile
@@ -21,6 +21,7 @@ dtb-$(CONFIG_ARCH_K3_AM6_SOC) += k3-am654-base-board.dtb \
 	k3-am654-base-board-jailhouse.dtbo
 
 dtb-$(CONFIG_ARCH_K3_J721E_SOC) += k3-j721e-common-proc-board.dtb \
+				   k3-j721e-proc-board-tps65917.dtb \
 				   k3-j721e-common-proc-board-infotainment.dtbo \
 				   k3-j721e-common-proc-board-infotainment-display-sharing.dtbo \
 				   k3-j721e-common-proc-board-jailhouse.dtbo
