--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -2263,6 +2263,9 @@
 				      <0xb022400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-pru0_0-fw";
+				interrupt-parent = <&icssg0_intc>;
+				interrupts = <16>, <17>;
+				interrupt-names = "vring", "kick";
 			};
 
 			rtu0_0: rtu@b004000 {
@@ -2272,6 +2275,9 @@
 				      <0xb023400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-rtu0_0-fw";
+				interrupt-parent = <&icssg0_intc>;
+				interrupts = <20>, <21>;
+				interrupt-names = "vring", "kick";
 			};
 
 			tx_pru0_0: txpru@b00a000 {
@@ -2290,6 +2296,9 @@
 				      <0xb024400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-pru0_1-fw";
+				interrupt-parent = <&icssg0_intc>;
+				interrupts = <18>, <19>;
+				interrupt-names = "vring", "kick";
 			};
 
 			rtu0_1: rtu@b006000 {
@@ -2299,6 +2308,9 @@
 				      <0xb023c00 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-rtu0_1-fw";
+				interrupt-parent = <&icssg0_intc>;
+				interrupts = <22>, <23>;
+				interrupt-names = "vring", "kick";
 			};
 
 			tx_pru0_1: txpru@b00c000 {
@@ -2405,6 +2417,9 @@
 				      <0xb122400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-pru1_0-fw";
+				interrupt-parent = <&icssg1_intc>;
+				interrupts = <16>, <17>;
+				interrupt-names = "vring", "kick";
 			};
 
 			rtu1_0: rtu@b104000 {
@@ -2414,6 +2429,9 @@
 				      <0xb123400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-rtu1_0-fw";
+				interrupt-parent = <&icssg1_intc>;
+				interrupts = <20>, <21>;
+				interrupt-names = "vring", "kick";
 			};
 
 			tx_pru1_0: txpru@b10a000 {
@@ -2432,6 +2450,9 @@
 				      <0xb124400 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-pru1_1-fw";
+				interrupt-parent = <&icssg1_intc>;
+				interrupts = <18>, <19>;
+				interrupt-names = "vring", "kick";
 			};
 
 			rtu1_1: rtu@b106000 {
@@ -2441,6 +2462,9 @@
 				      <0xb123c00 0x100>;
 				reg-names = "iram", "control", "debug";
 				firmware-name = "j7-rtu1_1-fw";
+				interrupt-parent = <&icssg1_intc>;
+				interrupts = <22>, <23>;
+				interrupt-names = "vring", "kick";
 			};
 
 			tx_pru1_1: txpru@b10c000 {
