--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -1983,6 +1983,7 @@
 		ti,otap-del-sel-sdr104 = <0x5>;
 		ti,otap-del-sel-ddr50 = <0xc>;
 		ti,trm-icp = <0x8>;
+		ti,clkbuf-sel = <0x7>;
 		dma-coherent;
 		no-1-8-v;
 
@@ -2005,6 +2006,7 @@
 		ti,otap-del-sel-sdr104 = <0x5>;
 		ti,otap-del-sel-ddr50 = <0xc>;
 		ti,trm-icp = <0x8>;
+		ti,clkbuf-sel = <0x7>;
 		dma-coherent;
 		no-1-8-v;
 	};
