--- a/arch/arm/boot/dts/dra72-evm-revc.dts
+++ b/arch/arm/boot/dts/dra72-evm-revc.dts
@@ -22,21 +22,21 @@
 		#size-cells = <2>;
 		ranges;
 
-		ipu2_cma_pool: ipu2_cma@95800000 {
+		ipu2_memory_region: ipu2-memory@95800000 {
 			compatible = "shared-dma-pool";
 			reg = <0x0 0x95800000 0x0 0x3800000>;
 			reusable;
 			status = "okay";
 		};
 
-		dsp1_cma_pool: dsp1_cma@99000000 {
+		dsp1_memory_region: dsp1-memory@99000000 {
 			compatible = "shared-dma-pool";
 			reg = <0x0 0x99000000 0x0 0x4000000>;
 			reusable;
 			status = "okay";
 		};
 
-		ipu1_cma_pool: ipu1_cma@9d000000 {
+		ipu1_memory_region: ipu1-memory@9d000000 {
 			compatible = "shared-dma-pool";
 			reg = <0x0 0x9d000000 0x0 0x2000000>;
 			reusable;
@@ -146,15 +146,15 @@
 
 &ipu2 {
 	status = "okay";
-	memory-region = <&ipu2_cma_pool>;
+	memory-region = <&ipu2_memory_region>;
 };
 
 &ipu1 {
 	status = "okay";
-	memory-region = <&ipu1_cma_pool>;
+	memory-region = <&ipu1_memory_region>;
 };
 
 &dsp1 {
 	status = "okay";
-	memory-region = <&dsp1_cma_pool>;
+	memory-region = <&dsp1_memory_region>;
 };
